# OpenAspen

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALL.md  LANGCHAIN_HUB_SUMMARY.md  LICENSE  LMSTUDIO_QUICKSTART.md  MESSAGING_INTEGRATION_SUMMARY.md  Makefile  NEW_USER_SETUP.md  PERMANENT_SETUP.md  PROJECT_SUMMARY.md  README.md  SERVER_QUICKSTART.md  SETUP_COMPLETE.md  TELEGRAM_SETUP.md  pyproject.toml  pytest.ini  start_server.py  start_telegram_bot.py  test_lmstudio_minimal.py  test_lmstudio_simple.py  test_setup.py  test_system_metrics.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  LANGCHAIN_HUB_INTEGRATION.md  LMSTUDIO_SETUP.md  MESSAGING_INTEGRATION.md  MESSAGING_QUICKSTART.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_LANGCHAIN_HUB.md
examples/: README.md  advanced_tree.py  basic_tree.py  dashboard_server.py  degen_quickstart.py  grok_example.py  grok_simple.py  langchain_hub_example.py  lmstudio_example.py  lmstudio_quickstart.py  messaging_server.py  minimal_hub_example.py  server_example.py  system_monitor_lmstudio.py  telegram_bot.py  test_lmstudio_connection.py  tree.json
openaspen/: __init__.py  cli.py
openaspen/core/: __init__.py  branch.py  leaf.py  node.py  tree.py
openaspen/dashboard/: __init__.py  app.py
openaspen/dashboard/templates/: base.html  execute.html  index.html  messaging.html  monitor.html  settings.html  tree.html
openaspen/integrations/: __init__.py  base.py  gateway.py  langchain_hub.py  telegram.py  whatsapp.py
openaspen/llm/: __init__.py  providers.py  router.py
openaspen/rag/: __init__.py  embeddings.py  store.py
openaspen/server/: __init__.py  api.py  messaging_api.py
openaspen/skills/: system_monitor.py
openaspen/utils/: __init__.py  logging.py
scripts/: quick_setup.sh  run_tests.sh  setup.py  setup_dev.sh
tests/: test_core.py  test_langchain_hub.py  test_llm.py  test_rag.py  test_tree.py
