[tool.poetry]
name = "openaspen"
version = "0.1.0"
description = "Open-source tree-structured AI agent framework for multi-LLM orchestration with hierarchical RAG"
authors = ["OpenAspen Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/openaspen"
repository = "https://github.com/yourusername/openaspen"
keywords = ["ai", "agents", "llm", "rag", "langchain", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^1.2.0"
langgraph = "^1.0.0"
langchain-community = "^0.3.0"
faiss-cpu = "^1.7.4"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
click = "^8.1.7"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
psutil = "^5.9.0"
flask = "^3.0.0"
flask-socketio = "^5.3.0"
langchain-openai = {version = "^1.1.0", optional = true}
langchain-anthropic = {version = "^1.3.0", optional = true}
openai = {version = "^1.10.0", optional = true}
anthropic = {version = "^0.23.0", optional = true}
tiktoken = {version = "^0.8.0", optional = true}
python-telegram-bot = {version = "^21.0", optional = true}
chromadb = {version = "^0.6.0", optional = true}
duckduckgo-search = {version = "^6.0.0", optional = true}
wikipedia = {version = "^1.4.0", optional = true}
tavily-python = {version = "^0.3.0", optional = true}
langchain-experimental = {version = "^0.3.0", optional = true}

[tool.poetry.extras]
# LangChain Hub tools (no API keys needed)
hub-tools = ["duckduckgo-search", "wikipedia", "tavily-python", "langchain-experimental"]

# LLM providers (optional - LM Studio is free and requires none of these)
grok = ["openai", "langchain-openai", "tiktoken"]  # Grok uses OpenAI-compatible API
openai = ["openai", "langchain-openai", "tiktoken"]
anthropic = ["anthropic", "langchain-anthropic"]

# Optional features
chromadb = ["chromadb"]
telegram = ["python-telegram-bot"]

# Convenience bundles
cloud-llms = ["openai", "langchain-openai", "anthropic", "langchain-anthropic", "tiktoken"]
all = ["duckduckgo-search", "wikipedia", "tavily-python", "langchain-experimental", "openai", "langchain-openai", "anthropic", "langchain-anthropic", "tiktoken", "chromadb", "python-telegram-bot"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
openaspen = "openaspen.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=openaspen --cov-report=term-missing"
